# orienteering

./: .env.example  .gitignore  README.md  pyproject.toml  ВОЗМОЖНОСТИ_ПОРТАЛА.md
docs/: georeferencing.md  ideas.md
portal/: __init__.py  db.py  main.py
portal/infrastructure/: config.py
portal/routers/: ai.py  georef.py  imports.py  race_results.py
portal/services/: georef.py  gpx.py  race_grabber.py  race_protocol.py
prompts/: add_race_summary_button.md  jenks_zones.html
static/: georef.js  player.js  race_reachability_dialog.js  race_result.js  split_analysis_dialog.js  split_view_dialog.js  splits.js  style.css  track.js
templates/: index.html  race_result.html  race_result_grabber.html  race_result_import.html  race_result_preview.html  race_results.html  training_import_details.html  training_import_map.html  training_import_track.html  training_player.html  trainings.html
templates/partials/: race_reachability_dialog.html  split_analysis_dialog.html  split_view_dialog.html
tests/: conftest.py  test_ai.py  test_app.py  test_georef.py  test_gpx.py  test_race_grabber.py  test_race_protocol.py  test_splits_regression.py
tests/fixtures/: championship_splits.json  kislovodsk_splits.json
